# webserver-comparsion

./: dummy_data.csv  dummy_data_100.csv
golang/: Dockerfile  go.mod  server.go  start_container.sh
javascript/: Dockerfile  server.js
javascript/bun/: Dockerfile  bun.lockb  package.json  start_container.sh
javascript/bun/src/: data.ts  index.ts
javascript/node/: data.js  package-lock.json  package.json  start_container.sh
python/: Dockerfile  app.py  docker-compose.yaml  start_container.sh
python/data/: convert_toJSON.py  dummy_data.json  dummy_data_usernames.json
python/nginx/: nginx.conf
rust/: Cargo.toml  Dockerfile  start_container.sh
rust/data/: dummy_data.csv
rust/src/: main.rs
testing/: log_docker_stats.sh  stats.txt
testing/k6/: run_test.sh  test-script.js
testing/locust/: locustfile.py  run_locust.sh
testing/results/: convert_stats.ipynb  node-req.csv  results.ipynb  results2.ipynb  rust-requests.csv
testing/results/golang/: go-r1.csv  go-r2.csv  go-r3.csv  go-stats-conv-r1.csv  go-stats-conv-r2.csv  go-stats-conv-r3.csv  go-stats-r1.csv  go-stats-r2.csv  go-stats-r3.csv
testing/results/js/bun/: bun-r1.csv  bun-r2.csv  bun-r3.csv  (+6 more)
testing/results/python/: python-r1.csv  python-r2.csv  python-r3.csv  python-stats-conv-r1.csv  python-stats-conv-r2.csv  python-stats-conv-r3.csv  python-stats-r1.csv  python-stats-r2.txt  python-stats-r3.csv
testing/results/rust/: rust-r1.csv  rust-r2.csv  rust-r3.csv  rust-stats-conv-r1.csv  rust-stats-conv-r2.csv  rust-stats-conv-r3.csv  rust-stats-r1.txt  rust-stats-r2.txt  rust-stats-r3.txt
(+9 files in other folders)
