[package]
name = "rust-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = ">=0.7.5"
serde = { version = ">=1.0.209", features = ["derive"] }
tokio = { version = ">=1.40.0", features = ["full"] }
csv = ">=1.3.0"

[profile.release]
codegen-units = 1
lto = false

[build]
rustflags = ["-C", "target-cpu=native"]
